# QuickTRM

./: CMakeLists.txt  README.md  main.c  quickTRM  strTest
libs/: gaymer_print.c  gaymer_print.h  string.c  string.h
