cmake_minimum_required(VERSION 4.0.0)
project(quickTRM VERSION 1.1.3)
set (CPACK_RESOURCE_FILE_LICENSE "/home/meth/gitProjects/bashShell/LICENSE")
add_executable(${PROJECT_NAME} main.c libs/string.c)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
set(CPACK_ARCHIVE_COMPONENT_INSTALL 1)
	include(CPack)
